--- a/face/simple-vue/index.html
+++ b/face/simple-vue/index.html
@@ -2,5 +2,6 @@
   <p>请输入:</p>
   <input type="text" id="input" />
   <p id="p"></p>
-  <script src="./index.js"></script>
+  <script src="./index-proxy.js"></script>
+  <!-- <script src="./index.js"></script> -->
 </body>
